tests/bad/uint8_256.radl

# should be rejected because uint8 is too small.

x : uint8 256
